# gestione-magazzino

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxygen.config
csv/: csv.h  csv_file.c  csv_file.h  csv_records.c  csv_records.h  csv_row.c  csv_row.h  utils.c  utils.h
data/: magazzino.csv  storico.csv
data/example/: README.md  esempio-magazzino.csv  esempio-storico.csv  fotowalls-child-products.csv  inqeo-product-feed.csv
include/: csv_file.c  csv_file.h  csv_records.c  csv_records.h  csv_row.c  csv_row.h  utils.c
src/: magazzino.c  magazzino.h  main.c  storico.c  storico.h  utils.c  utils.h
